escaping now done in templates, error and warning type surfaced in outputs (json and soap12 for now)